Fix casing in GET /tss/transactions/{hash} and update both the code and OpenAPI to make objects at sync.
