# openapi/main.yaml
@@ -652,21 +652,68 @@ paths:
                   transactionXdr:
                     type: string
                     description: "The base64-encoded xdr string of the transaction"
+                  resultXdr:
+                    type: string
+                    description: "The base64-encoded xdr string of the transaction result"
+                  createdAt:
+                    type: integer
+                    description: "The unix timestamp of when the transaction was included in the ledger"
                   status:
                     type: string
-                    description: "The current status of the transaction"
                     enum:
-                      - NEW (not processed yet)
-                      - SENT (final tx result sent to client via webhook)
-                      - NOT_SENT (failed to send final tx to client via webhook)
-                      - FAILED (tx failed)
-                      - SUCCESS (tx success)
-                      - PENDING (tx pending)
-                      - ERROR (tx errored out when submitting, retries still in progress unless error is terminal)
-                      - TRY_AGAIN_LATER (an rpc response indicating a gongested network, retries in progress)
+                      - NEW
+                      - PENDING
+                      - DUPLICATE
+                      - TRY_AGAIN_LATER
+                      - ERROR
+                      - FAILED
+                      - SUCCESS
+                      - SENT
+                      - NOT_SENT
+                    description: |
+                      The current status of the transaction in the database:
+                      - `NEW`: Transaction was created in the wallet-backend but not yet submitted to the RPC
+                      - `PENDING`: Transaction was submitted to the RPC and is pending a final result
+                      - `DUPLICATE`: Transaction was submitted to the RPC but was rejected for being a duplicate of a previously submitted transaction
+                      - `TRY_AGAIN_LATER`: An RPC response indicating a congested network, retries in progress
+                      - `ERROR`: Transaction errored out when submitting. Usually indicates a malformed transaction
+                      - `FAILED`: Transaction was submitted to the RPC but and resulted in an error after being processsed by the Network.
+                      - `SUCCESS`: Transaction was submitted to the RPC and succeeded
+                      - `SENT`: the final transaction result was sent to the client via webhook
+                      - `NOT_SENT`: the final transaction result was not sent to the client via webhook
+                  transactionResultCode:
+                    type: integer
+                    enum: [0, 100, 101, 102, 103, 1, 0, -1, -2, -3, -4, -5, -6, -7, -8, -9, -10, -11, -12, -13, -14, -15, -16, -17]
+                    description: |
+                      The result code of the transaction as returned by the RPC. Possible values are:
+                      - `100`: (wallet-backend) Empty, no-code
+                      - `101`: (wallet-backend) RPC failed
+                      - `102`: (wallet-backend) Unmarshal binary code
+                      - `103`: (wallet-backend) Empty code
+                      - `1`: Success, fee bump inner transaction succeeded
+                      - `0`: Success, all operations succeeded
+                      - `-1`: Error, one of the operations failed (none were applied)
+                      - `-2`: Error, ledger closeTime before minTime
+                      - `-3`: Error, ledger closeTime after maxTime
+                      - `-4`: Error, no operation was specified
+                      - `-5`: Error, sequence number does not match source account
+                      - `-6`: Error, too few valid signatures / wrong network
+                      - `-7`: Error, insufficient balance. Fee would bring account below reserve
+                      - `-8`: Error, source account not found
+                      - `-9`: Error, insufficient fee. Fee is too small
+                      - `-10`: Error, unused signatures attached to transaction
+                      - `-11`: Error, unknown error occurred
+                      - `-12`: Error, transaction type not supported
+                      - `-13`: Error, fee bump inner transaction failed
+                      - `-14`: Error, sponsorship not confirmed
+                      - `-15`: Error, minSeqAge or minSeqLedgerGap conditions not met
+                      - `-16`: Error, precondition is invalid
+                      - `-17`: Error, soroban-specific preconditions were not met
               example:
                 transactionHash: "Y6MF7SMT2a2d6pt3i37Xx9"
                 transactionXdr: "AAAAAgAAAADnY6MF7SMT2a2d6pt3i37Xx9IhaHqJ2lCcibNOISzhOwABX5AAFs2YAAAADAAAAAEAAAAAAAAAAAAAAABmYGswAAAAAAAAAAkAAAABAAAAAOdjowXtIxPZrZ3qm3eLftfH0iFoeonaUJyJs04hLOE7AAAAEAAAAACOC8v8STBDIULGM3FlZ6O7N3vHpNns7bcwRDFlIxTMiwAAAAEAAAAA52OjBe0jE9mtneqbd4t+18fSIWh6idpQnImzTiEs4TsAAAAAAAAAAI4L"
+                resultXdr: "AAAAAgAAAADnY6MF7SMT2a2d6pt3i37Xx9IhaHqJ2lCcibNOISzhOwABX5AAFs2YAAAADAAAAAEAAAAAAAAAAAAAAABmYGswAAAAAAAAAAkAAAABAAAAAOdjowXtIxPZrZ3qm3eLftfH0iFoeonaUJyJs04hLOE7AAAAEAAAAACOC8v8STBDIULGM3FlZ6O7N3vHpNns7bcwRDFlIxTMiwAAAAEAAAAA52OjBe0jE9mtneqbd4t+18fSIWh6idpQnImzTiEs4TsAAAAAAAAAAI4L"
+                createdAt: 1620000000
                 status: "SUCCESS"
         '400':
           description: Bad Request
